config changes, broken links. TODO: seo, page titles, test all example code on site...

--- a/src/pages/advanced/advanced-setup-python.mdx
+++ b/src/pages/advanced/advanced-setup-python.mdx
@@ -126,6 +126,6 @@ The fastest way to try Moondream with zero setup:
 
 ## Next Steps
 
-- Read the [Getting Started](/moondream-docs/getting-started) guide for detailed setup
-- Explore [Examples](/moondream-docs/examples) for more use cases
-- Learn about [Capabilities](/moondream-docs/capabilities) in detail
+- Read the [Getting Started](/getting-started) guide for detailed setup
+- Explore [Examples](/examples) for more use cases
+- Learn about [Capabilities](/capabilities) in detail
