--- a/src/pages/cloud/detect.mdx
+++ b/src/pages/cloud/detect.mdx
@@ -1,7 +1,12 @@
 import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra/components'
+import Head from 'next/head'
 
 # Object Detection API
+
+<Head>
+  <meta name="color-scheme" content="light" />
+</Head>
 
 Detect and locate objects in images.
 
