--- a/src/pages/cloud/point.mdx
+++ b/src/pages/cloud/point.mdx
@@ -1,7 +1,12 @@
 import { Tabs } from 'nextra/components';
 import { Callout } from 'nextra/components';
+import Head from 'next/head';
 
 # Visual Pointing API
+
+<Head>
+  <meta name="color-scheme" content="light" />
+</Head>
 
 Get coordinates for specific objects or regions in images.
 
