--- a/src/pages/cloud/query.mdx
+++ b/src/pages/cloud/query.mdx
@@ -1,7 +1,12 @@
 import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra/components'
+import Head from 'next/head'
 
 # Visual Question Answering API
+
+<Head>
+  <meta name="color-scheme" content="light" />
+</Head>
 
 Ask questions about images and get natural language answers.
 
