--- a/src/pages/cookbook/jupyter-notebook.mdx
+++ b/src/pages/cookbook/jupyter-notebook.mdx
@@ -483,4 +483,4 @@ save_results(results)
    - Verify file paths and permissions
    - Check image format support
 
-For more examples and advanced usage, see the [Getting Started](/moondream-docs/getting-started) guide.
+For more examples and advanced usage, see the [Getting Started](/getting-started) guide.
