--- a/src/pages/cookbook/sample-cli.mdx
+++ b/src/pages/cookbook/sample-cli.mdx
@@ -4,7 +4,7 @@ Create a command-line interface for image analysis and interactive questioning.
 
 ## Prerequisites
 
-1. Download a model from our [Model Downloads](/moondream-docs/model-downloads) page
+1. Download a model from our [Model Downloads](/model-downloads) page
 2. Install dependencies:
 ```bash
 pip install torch transformers pillow
