--- a/src/pages/cookbook/streamlit-chat.mdx
+++ b/src/pages/cookbook/streamlit-chat.mdx
@@ -4,7 +4,7 @@ Create an interactive chat interface with Moondream using Streamlit.
 
 ## Prerequisites
 
-1. Download a model from our [Model Downloads](/moondream-docs/model-downloads) page
+1. Download a model from our [Model Downloads](/model-downloads) page
 2. Install dependencies:
 
 ```bash
