--- a/src/pages/local-deployment/getting-started.mdx
+++ b/src/pages/local-deployment/getting-started.mdx
@@ -10,7 +10,7 @@ import { Tabs } from 'nextra/components'
 - Download [Moondream 2B INT8 Model (1.7GB)](https://huggingface.co/vikhyatk/moondream2/resolve/1cf747d11539ba8827f172e57f2215b5df3306cd/moondream-2b-int8.bin.gz?download=true) and place in `models/moondream-2b-int8.bin.gz`
 
 <Callout type="info">
-  Other models available at [Model Downloads](/moondream-docs/model-downloads)
+  Other models available at [Model Downloads](/model-downloads)
 </Callout>
 
 <Steps>
