--- a/src/pages/local-deployment/query.mdx
+++ b/src/pages/local-deployment/query.mdx
@@ -8,7 +8,7 @@ Ask questions about images and get natural language answers with Moondream.
 pip install moondream==0.0.2
 ~~~
 
-Download the model from our [Model Downloads](/moondream-docs/model-downloads) page.
+Download the model from our [Model Downloads](/model-downloads) page.
 
 ## Basic Usage
 
