--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -39,7 +39,7 @@ Create a new directory for your project
 Download the model by clicking here: [Download Moondream 0.5B INT8](https://huggingface.co/vikhyatk/moondream2/resolve/1cf747d11539ba8827f172e57f2215b5df3306cd/moondream-0_5b-int8.bin.gz?download=true)
 
 <Callout type="info">
-  Check out other available models at [Model Downloads](/moondream-docs/model-downloads) for different size and performance options.
+  Check out other available models at [Model Downloads](/model-downloads) for different size and performance options.
 </Callout>
 
 ### Move Model File
@@ -88,9 +88,6 @@ for t in model.caption(encoded_image, stream=True)['caption']:
 ## Next Steps
 
 - Try our [Cloud API](/cloud/getting-started) for a serverless solution
-- Learn about [Capabilities](/capabilities) in detail
-- Check out [GPU Acceleration & Transformers](/advanced/gpu-and-transformers) for advanced usage
-
 <Callout>
   Run into any issues getting setup? Join our [Discord](https://discord.com/invite/tRUdpjDQfH) and share your experience or get help!
 </Callout>
