--- a/src/pages/cookbook/gradio-webcam.mdx
+++ b/src/pages/cookbook/gradio-webcam.mdx
@@ -4,7 +4,7 @@ Create a real-time webcam interface for Moondream using Gradio.
 
 ## Prerequisites
 
-1. Download a model from our [Model Downloads](/moondream-docs/model-downloads) page
+1. Download a model from our [Model Downloads](/model-downloads) page
 2. Install dependencies:
 ```bash
 pip install gradio torch transformers einops
