--- a/src/pages/local-deployment/detect.mdx
+++ b/src/pages/local-deployment/detect.mdx
@@ -8,7 +8,7 @@ Detect and locate objects in images with Moondream.
 pip install moondream==0.0.2
 ~~~
 
-Download the model from our [Model Downloads](/moondream-docs/model-downloads) page.
+Download the model from our [Model Downloads](/model-downloads) page.
 
 ## Basic Usage
 
