--- a/src/pages/technical-specifications.mdx
+++ b/src/pages/technical-specifications.mdx
@@ -580,6 +580,9 @@ import { Callout } from 'nextra/components';
 					<li>
 						<span className='font-medium'>POPE</span>: Popular Objects in Common Environment - Object presence verification (random/popular/adversarial)
 					</li>
+					<li>
+						<span className='font-medium'>Natural Bench</span>: Evaluation on natural adversarial samples requiring diverse visio-linguistic skills like attribute binding, relationships, logic and counting
+					</li>
 				</ul>
 			</div>
 		</div>
