--- a/src/pages/local-deployment/query.mdx
+++ b/src/pages/local-deployment/query.mdx
@@ -1,18 +1,18 @@
 # Visual Question Answering
 
-Ask questions about images and get natural language answers with Moondream.
+Ask natural language questions about images and get detailed answers with Moondream.
 
 ## Installation & Model
 
-~~~bash
+```bash filename="terminal"
 pip install moondream==0.0.2
-~~~
+```
 
 Download the model from our [Model Downloads](/model-downloads) page.
 
 ## Basic Usage
 
-~~~python
+```python filename="example.py"
 from moondream import VL
 model = VL("models/moondream-2b-int8.bin.gz")
 
@@ -23,7 +23,7 @@ print(answer['answer'])
 # Ask about objects
 answer = model.query(image, "How many people are in this image?")
 print(answer['answer'])
-~~~
+```
 
 That's all you need to start asking questions about images!
 
@@ -31,6 +31,6 @@ That's all you need to start asking questions about images!
 
 ## Next Steps
 
-- Check out our [Examples](/cookbook/basic-usage) to see image captioning in action with sample code and use cases
+- Check out our [Examples](/cookbook/basic-usage) to see question answering in action with sample code and use cases
 - Learn about model specifications and performance in our [Technical Specifications](/technical-specifications) guide
 - Want to use moondream with Transformers? Check out our [Integration Guide](/advanced/transformers)
